objects/vlocity_ins__OutboundConfiguration__c.object
<CustomObject>
    <description>The Vlocity DataRaptor Outbound Configuration defines the configuration of an outbound data export.</description>
    <fields>
        <fullName>vlocity_ins__BatchSize__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeleteAfterSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete After Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HTTPMethod__c</fullName>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POST</fullName>
                    <default>true</default>
                    <label>POST</label>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>HEAD</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>TRACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__InitialAction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PathstoDelete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paths to Delete</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Template</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity Outbound Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Outbound Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Outbound Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>